--- a/bin/view/tienda.fxml
+++ b/bin/view/tienda.fxml
@@ -50,7 +50,7 @@
             <Font size="18.0" />
           </font>
         </Label>
-            <ImageView fitHeight="475.0" fitWidth="855.0" layoutX="-13.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="475.0" fitWidth="855.0" layoutX="-13.0" layoutY="-10.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imagenes/fondo/fondo_tienda.png" />
                </image>
@@ -105,16 +105,24 @@
                   <Font name="Verdana Italic" size="19.0" />
                </font>
             </Label>
-            <ImageView fitHeight="74.0" fitWidth="125.0" layoutX="672.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="74.0" fitWidth="125.0" layoutX="672.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../imagenes/boton/imgMarcoPokedollars.png" />
                </image>
             </ImageView>
-            <Label fx:id="lblPokedollars" alignment="CENTER" layoutX="679.0" layoutY="4.0" prefHeight="46.0" prefWidth="118.0" textFill="WHITE">
+            <Label fx:id="lblPokedollars" alignment="CENTER" layoutX="675.0" layoutY="12.0" prefHeight="46.0" prefWidth="118.0" textFill="WHITE">
                <font>
-                  <Font name="David Libre Regular" size="24.0" />
+                  <Font name="Pokemon Classic Regular" size="12.0" />
                </font>
             </Label>
+            <ImageView fx:id="btnAbrirMochila" fitHeight="62.0" fitWidth="155.0" layoutX="31.0" layoutY="10.0" onMouseClicked="#abrirMochila" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../imagenes/boton/btnAbrirMochila.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
       </children>
     </AnchorPane>
   </children>
