--- a/src/view/seleccionPokemon.fxml
+++ b/src/view/seleccionPokemon.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="506.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SeleccionarPokemonController">
    <children>
       <ImageView fitHeight="588.0" fitWidth="507.0" pickOnBounds="true">
@@ -141,37 +140,37 @@
             <Font name="Verdana Bold" size="16.0" />
          </font>
       </Label>
-      <ImageView fx:id="btnUsar1" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="31.0" onMouseClicked="#btnUsar1Click" onMouseEntered="#btnUsar1Enter" onMouseExited="#btnUsar1Exit" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnUsar1" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="31.0" onMouseClicked="#btnUsar1Click" onMouseEntered="#btnUsar1Enter" onMouseExited="#btnUsar1Exit" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
          <image>
             <Image url="@../Imagenes/boton/boton_usar.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnUsar2" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="103.0" onMouseClicked="#btnUsar2Click" onMouseEntered="#btnUsar2Enter" onMouseExited="#btnUsar2Exit" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnUsar2" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="103.0" onMouseClicked="#btnUsar2Click" onMouseEntered="#btnUsar2Enter" onMouseExited="#btnUsar2Exit" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
          <image>
             <Image url="@../Imagenes/boton/boton_usar.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnUsar3" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="177.0" onMouseClicked="#btnUsar3Click" onMouseEntered="#btnUsar3Enter" onMouseExited="#btnUsar3Exit" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnUsar3" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="177.0" onMouseClicked="#btnUsar3Click" onMouseEntered="#btnUsar3Enter" onMouseExited="#btnUsar3Exit" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
          <image>
             <Image url="@../Imagenes/boton/boton_usar.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnUsar4" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="252.0" onMouseClicked="#btnUsar4Click" onMouseEntered="#btnUsar4Enter" onMouseExited="#btnUsar4Exit" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnUsar4" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="252.0" onMouseClicked="#btnUsar4Click" onMouseEntered="#btnUsar4Enter" onMouseExited="#btnUsar4Exit" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
          <image>
             <Image url="@../Imagenes/boton/boton_usar.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnUsar5" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="325.0" onMouseClicked="#btnUsar5Click" onMouseEntered="#btnUsar5Enter" onMouseExited="#btnUsar5Exit" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnUsar5" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="325.0" onMouseClicked="#btnUsar5Click" onMouseEntered="#btnUsar5Enter" onMouseExited="#btnUsar5Exit" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
          <image>
             <Image url="@../Imagenes/boton/boton_usar.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="btnUsar6" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="397.0" onMouseClicked="#btnUsar6Click" onMouseEntered="#btnUsar6Enter" onMouseExited="#btnUsar6Exit" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="btnUsar6" fitHeight="87.0" fitWidth="82.0" layoutX="377.0" layoutY="397.0" onMouseClicked="#btnUsar6Click" onMouseEntered="#btnUsar6Enter" onMouseExited="#btnUsar6Exit" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
          <image>
             <Image url="@../Imagenes/boton/boton_usar.png" />
          </image>
       </ImageView>
-      <Label fx:id="eligePokeLbl" layoutX="28.0" layoutY="539.0" prefHeight="34.0" prefWidth="446.0" textFill="WHITE">
+      <Label fx:id="eligePokeLbl" layoutX="58.0" layoutY="539.0" prefHeight="34.0" prefWidth="392.0" text="¡Tu Pokémon se ha debilitado!" textFill="WHITE">
          <font>
             <Font name="Pokemon Classic Regular" size="16.0" />
          </font>
